# logitech-flow-kvm

./: .bumpversion.cfg  .cookiecutterrc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  logitech_flow_kvm.rst
src/logitech_flow_kvm/: __main__.py  _platform_patches.py  cli.py  constants.py  exceptions.py  logging_setup.py  reconciler.py  sse.py  util.py
src/logitech_flow_kvm/commands/: __init__.py  flow_client.py  flow_server.py  list_devices.py  switch_to_host.py  watch.py
src/logitech_flow_kvm/hidpp/: __init__.py  discovery.py  exceptions.py  listener.py  models.py  protocol.py  receiver.py  transport.py
src/logitech_flow_kvm/tui/: __init__.py  app.py  app.tcss  logging_handler.py  pairing.py  widgets.py
tests/: hidpp_fakes.py  test_flow_client.py  test_flow_server.py  test_hidpp_discovery.py  test_hidpp_protocol.py  test_hidpp_receiver.py  test_logging_setup.py  test_reconciler.py  test_sse.py  test_util.py
tests/tui/: test_app.py  test_logging_handler.py  test_pairing.py  test_widgets.py
